external-crates/move/crates/move-compiler/tests/move_2024/naming/standalone_module_ident.exp
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/naming/standalone_module_ident.move:8:17
  │
8 │         let x = X; x;
<<<<<<< HEAD
  │                 ^ Expected a type, function, or constant in this position, not a module
=======
  │                 ^ Unexpected module. A module identifier is not a valid expression
>>>>>>> 3ee5696004 (Add enums to compiler)

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/naming/standalone_module_ident.move:9:17
  │
9 │         let x = 0x2::X; x;
  │                 ^^^^^^ Unexpected module. A module identifier is not a valid expression

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/naming/standalone_module_ident.move:10:17
   │
10 │         let y = 0x2::Y; y;
   │                 ^^^^^^ Unexpected module. A module identifier is not a valid expression

